--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,10 @@
     <title>Grey Mountains</title>
     <!--GOOGLE FONT (Montserrat)-->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
+    <!--GOOGLE FONT BEBAS NEUE-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
 </head>
 <body>
     <div id="root"></div>
