--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Grey Mountains</title>
+    <title>Grey Mountains Media - Deine Creative Agency</title>
     <!--GOOGLE FONT (Montserrat)-->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap" rel="stylesheet">
     <!--GOOGLE FONT BEBAS NEUE-->
